[project]
name = "mot"
version = "0.1.0"
description = ""
authors = [
    {name = "roger",email = "minseungkim1017@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics (>=8.3.142,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
