[tool.poetry]
name = "extract_cough"
version = "0.1.0"
package-mode = false
description = ""
authors = ["rogerkimjazzlover <minseungkim1017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.47.1"
torchvision = "^0.20.1"
llvmlite = "^0.43.0"
matplotlib = "^3.10.0"
numpy = "2.0.0"
librosa = "^0.10.2.post1"
torch = "^2.5.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
